<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/border_for_popup3"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/carpiOyunBitti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_cancel_24"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tebriklerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tebrikler"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#C89635"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carpiOyunBitti"/>

    <TextView
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:id="@+id/oyunBittiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/oyunu_basariyla_tamamladin"
        android:textColor="#C89635"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tebriklerText" />

    <ImageView
        android:id="@+id/imageViewTrophy"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/trophyicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oyunBittiText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tekrarOyunBittiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="140dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg3"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="8"
        android:text="@string/tekrar_oyna"
        android:textColor="#C89635"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTrophy"
        app:layout_constraintVertical_bias="0.06" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menuyeGitOyunBittiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="140dp"
        android:background="@drawable/button_bg3"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="8"
        android:text="@string/menuye_git"
        android:textColor="#C89635"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekrarOyunBittiButton" />


</androidx.constraintlayout.widget.ConstraintLayout>