<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SignInFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border4"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:ems="14"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat"
            android:inputType="textEmailAddress"
            android:hint="@string/eposta_adresi"
            android:layout_marginTop="120dp"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textColorHint="#B7B6B6"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText

            android:id="@+id/editTextSifre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border4"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:textColor="@color/black"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            android:textColorHint="#B7B6B6"
            android:paddingTop="10dp"
            android:paddingEnd="8dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <TextView
            android:id="@+id/sifremiUnuttumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/sifremi_unuttum"
            android:layout_marginBottom="7dp"
            android:textColor="#2E56A6"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="200dp"
            android:layout_height="0.2dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="7dp"
            android:background="#46000000"
            app:layout_constraintBottom_toTopOf="@+id/yeniHesap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/girisYapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/giris_yap"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSifre" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/yeniHesap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:textColor="#6E6E6E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/bir_hesabin_yok_mu"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/kayitOlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/kayit_ol"
                android:textColor="#2E56A6"
                android:textSize="15sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/googleGirisYap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/border_button"
            android:orientation="horizontal"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/girisYapButton">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="411dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/ile_giris_yap"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="418dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/facebookGirisYap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_button"
            android:orientation="horizontal"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleGirisYap">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_facebook_24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/ile_giris_yap"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="418dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.facebook.login.widget.LoginButton
            android:visibility="gone"
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86dp"
            app:layout_constraintBottom_toTopOf="@+id/sifremiUnuttumText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebookGirisYap"
            app:layout_constraintVertical_bias="0.0" />


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBarSignIn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>